# front-porch-AI

./: .gitattributes  .gitignore  AGENTS.md  APRIL_17_FIXES_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FEATURE_PLAN_IMAGE_GEN_CONTROLS.md  LICENSE  PRIVACY.md  README.md  TEST-RAWHIDE-PR36-INTEGRATION-LOG.md  TESTING_IMAGE_GEN.md  The_Legacy_of_War.txt  analysis_options.yaml  build.yaml  dart_test.yaml  draft_note_to_character_card_forge.md  embed_server.py  index.html  kokoro_tts.py  piper_entry.py  privacy.html  pubspec.yaml  sentiment_classifier.py  test_classifier.py  test_classifier_no_torch.py  test_flatbuffer.py  test_grpc_gen.py  test_mod.dart  test_native_onnx.py  update_workflows.py
.claude/: changelog.md
.llm_context/: SESSION_SUMMARY.md
.opencode/: opencode.json
.recovery/: pre_stage2_chat_page.dart
.sandbox-home/: .flutter
.sisyphus/: boulder.json
aur/: PKGBUILD
aur-beta/: PKGBUILD  front-porch-ai.desktop
docs/: CNAME  CharacterCardForge_GroupChat_Integration_Guide.md  README.md  Rawhide.md  STMacro.md  characters.md  dev.md  faq.md  getting-started.md  index.html  install.md  keyboard-shortcuts.md  main.md  moe-vram-estimation.md  realism-engine.md  refactor-god-file-modularization.md  refactoring-guide.md  release-notes.md  troubleshooting.md  user-guide.md  web-parity.md
lib/: app_version.dart  main.dart  test_pad.dart
linux/: CMakeLists.txt
macos/: ExportOptions.plist
scripts/: apt-install.sh  build-macos.sh  sync_version.sh
test/: widget_test.dart  (+6 more)
tools/embed_server/: Cargo.toml
tools/embed_server/src/: main.rs
(+775 files in other folders)
