[package]
name = "embed_server"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
# FastEmbed for embedding (bundles ort ONNX Runtime)
fastembed = "4"

# HTTP server
axum = "0.8"
tokio = { version = "1", features = ["full"] }

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Directories for model cache path
dirs = "6"

[profile.release]
opt-level = "s"
lto = true
strip = true
